--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
             <div>
                 <h3>Contact</h3>
                 <div class="footer-links">
-                    <a href="mailto:info@adorabiosolutions.com">Email: info@adorabiosolutions.com</a>
+                    <a href="mailto:vassilev@adorabiosolutions.com">Email: vassilev@adorabiosolutions.com</a>
                     <a href="tel:+15551234567">Phone: +1 (555) 123-4567</a>
                     <p style="margin-top: 0.5rem;">Address: 123 Medical Plaza, Boston, MA</p>
                 </div>
@@ -591,7 +591,7 @@
             <div>
                 <h3>Follow Us</h3>
                 <div class="footer-links">
-                    <a href="#" target="_blank">LinkedIn</a>
+                    <a href="https://linkedin.com/in/ventzi-vassilev" target="_blank">LinkedIn</a>
                 </div>
             </div>
         </div>
