--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             color: #2c3e50;
             scroll-behavior: smooth;
         }
+		
+		section {
+			scroll-margin-top: 120px;
+		}
 
         .header {
             background: linear-gradient(to right, #0ea5e9 0%, #10b981 100%);
@@ -187,7 +191,7 @@
             border-radius: 15px;
             box-shadow: 0 5px 20px rgba(0,0,0,0.08);
             transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
-            scroll-margin-top: 90px;
+            scroll-margin-top: 120px;
             position: relative;
             overflow: hidden;
         }
@@ -303,7 +307,7 @@
             grid-template-columns: 1fr 1fr;
             gap: 4rem;
             align-items: center;
-            scroll-margin-top: 90px;
+            scroll-margin-top: 130px;
         }
 
         .about-image {
@@ -342,7 +346,7 @@
             background: #2c3e50;
             color: white;
             padding: 60px 2rem 30px;
-            scroll-margin-top: 90px;
+            scroll-margin-top: 120px;
         }
 
         .footer-content {
@@ -383,9 +387,10 @@
             margin-bottom: 0.5rem;
         }
 		
-		contact-item i {
-            color: #10b981;
-            width: 20px;
+		.contact-item img {
+            filter: brightness(0) saturate(100%) invert(49%) sepia(100%) saturate(372%) hue-rotate(109deg) brightness(96%) contrast(94%);
+            width: 18px;
+			margin-right: 10px;
         }
 
         @media (min-width: 768px) {
@@ -421,6 +426,54 @@
 
             .about {
                 grid-template-columns: 1fr;
+            }
+        }
+		
+		.scroll-to-top {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            width: 50px;
+            height: 50px;
+            background: linear-gradient(135deg, rgba(14,165,233, 0.6), rgba(16,185,129, 0.6));
+            color: white;
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.5rem;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.3s, visibility 0.3s, transform 0.3s;
+            z-index: 1000;
+        }
+		
+		.scroll-to-top img {
+			width: 30px;
+            height: 30px;
+			filter: brightness(0) saturate(100%) invert(100%) sepia(3%) saturate(0%) hue-rotate(31deg) brightness(103%) contrast(103%);
+		}
+
+        .scroll-to-top.show {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .scroll-to-top:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 20px rgba(16, 185, 129, 0.4);
+        }
+
+        @media (max-width: 768px) {
+            .scroll-to-top {
+                bottom: 20px;
+                right: 20px;
+                width: 45px;
+                height: 45px;
+                font-size: 1.3rem;
             }
         }
     </style>
@@ -600,16 +653,16 @@
             <div>
                 <h3>Contact</h3>
                 <div class="footer-links">
-                    <a href="mailto:vassilev@adorabiosolutions.com">
-						<i class="fas fa-envelope"></i>
+                    <a href="mailto:vassilev@adorabiosolutions.com" class="contact-item">
+						<img src="icons/envelope.svg" alt="Email:">
 						vassilev@adorabiosolutions.com
 					</a>
-                    <a href="tel:+32472629007">
-						<i class="fas fa-phone"></i>
+                    <a href="tel:+32472629007" class="contact-item">
+						<img src="icons/phone.svg" alt="Phone:">
 						+32 472-629007
 					</a>
                     <div class="contact-item">
-						<i class="fas fa-map-marker-alt"></i>
+						<img src="icons/location-dot.svg" alt="Address:">
 						Route de Genval 141, 1380 Lasne, Belgium
 					</div>
                 </div>
@@ -623,11 +676,36 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Adora Bio Solutions. All rights reserved. </p>
+            <p>&copy; <span id="currentYear"></span> Adora Bio Solutions. All rights reserved. | Designed and developed by Neli Tsankova </p>
         </div>
     </footer>
+	
+	 <button class="scroll-to-top" id="scrollToTop" onclick="scrollToTop()">
+        <img src="icons/angle-up.svg" alt="TOP">
+    </button>
 
     <script>
+		// Set current year dynamically
+        document.getElementById('currentYear').textContent = new Date().getFullYear();
+	
+		// Scroll to top functionality
+        const scrollToTopBtn = document.getElementById('scrollToTop');
+
+        window.addEventListener('scroll', function() {
+            if (window.pageYOffset > 300) {
+                scrollToTopBtn.classList.add('show');
+            } else {
+                scrollToTopBtn.classList.remove('show');
+            }
+        });
+
+        function scrollToTop() {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        }
+	
         function toggleMenu() {
             const nav = document.getElementById('mainNav');
             nav.classList.toggle('active');
