--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
             box-sizing: border-box;
         }
 
+		html {
+            scroll-behavior: smooth;
+        }
+		
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             color: #2c3e50;
-            scroll-behavior: smooth;
         }
 		
 		section {
@@ -41,6 +44,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 0 2rem;
+			height: 80px;
         }
 
         .logo {
@@ -49,20 +53,34 @@
             display: flex;
             align-items: center;
             gap: 0.5rem;
+			text-decoration: none;
+            color: white;
+            transition: opacity 0.3s;
+			position: relative;
+            top: 1rem;
+            z-index: 1001;
+			opacity: 0.95;
         }
 
         .logo-icon {
-            width: 80px;
-            height: 80px;
-            display: flex;
+            width: 120px;
+            height: 120px;
             align-items: center;
             justify-content: center;
+			background: white;
+            border-radius: 50%;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+			padding: 8px;
         }
 
         .logo-icon img {
             width: 100%;
             height: 100%;
             object-fit: contain;
+        }
+
+        .logo:hover {
+            opacity: 0.8;
         }
 
         nav ul {
@@ -93,6 +111,11 @@
         }
 
         @media (max-width: 768px) {
+			.logo-icon {
+				width: 110px;
+				height: 110px;
+			}
+			
             .menu-toggle {
                 display: block;
             }
@@ -484,9 +507,10 @@
         <div class="nav-container">
             <div class="logo">
                 <div class="logo-icon">
-                    <img src="logo.png" alt="Adora Bio Solutions">
+                    <a href="#home"><img src="logo.png" alt="Adora Bio Solutions"></a>
                 </div>
             </div>
+			
             <button class="menu-toggle" onclick="toggleMenu()">☰</button>
             <nav id="mainNav">
                 <ul>
@@ -501,7 +525,7 @@
 
     <section class="hero" id="home">
         <h1>Leading Vaccine & Immunotherapeutics Consulting</h1>
-        <p>Expert guidance for pharmaceutical innovation and regulatory compliance</p>
+        <p>Expert guidance for pharmaceutical innovation</p>
         <a href="mailto:info@adorabiosolutions.com?subject=Consultation%20Request&body=Hello%2C%0D%0A%0D%0AI%20would%20like%20to%20schedule%20a%20consultation%20regarding..." class="cta-button">Schedule Consultation</a>
     </section>
 
