--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             justify-content: center;
 			background: white;
             border-radius: 50%;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            box-shadow: 0 4px 15px rgba(0,0,0,0.6);
 			padding: 8px;
         }
 
@@ -524,7 +524,7 @@
     </header>
 
     <section class="hero" id="home">
-        <h1>Leading Vaccine & Immunotherapeutics Development Consulting</h1>
+        <h1>Vaccine & Immunotherapeutics Development Consultancy</h1>
         <p>Expert guidance for pharmaceutical innovation</p>
         <a href="mailto:info@adorabiosolutions.com?subject=Consultation%20Request&body=Hello%2C%0D%0A%0D%0AI%20would%20like%20to%20schedule%20a%20consultation%20regarding..." class="cta-button">Schedule Consultation</a>
     </section>
@@ -539,68 +539,61 @@
                 <h3>Feasibility Assessment</h3>
                 <p>Conduct market research to evaluate the demand for specific vaccines. Assess scientific literature to identify potential vaccine candidates. Analyze regulatory landscapes and funding opportunities. Strategic analysis of biotech business plans and clinical development plans, integrating activities.</p>
             </div>
-            <div class="service-card" id="strategic-partnerships">
-                <div class="service-icon">
-                    <img src="icons/emoji_u1f91d.svg" alt="🤝">
-                </div>
-                <h3>Strategic Partnerships and Collaborations</h3>
-                <p>Facilitate connections with academic institutions, pharmaceutical companies, and research organizations to foster collaboration. Support joint ventures and partnerships in vaccine innovation and development.</p>
-            </div>
-            <div class="service-card" id="preclinical-development">
-                <div class="service-icon">
-                    <img src="icons/emoji_u1f9ec.svg" alt="🧬">
-                </div>
-                <h3>Preclinical Development Support</h3>
-                <p>Consultancy on preclinical research and toxicology studies. Assist in designing and conducting preclinical studies, including in vitro and in vivo testing. Provide expertise in immunological assays and characterization of vaccine candidates, including immunological analysis and biomarkers.</p>
-            </div>
-            <div class="service-card" id="target-product-profile">
+			<div class="service-card" id="target-product-profile">
                 <div class="service-icon">
                     <img src="icons/emoji_u1f3af.svg" alt="🎯">
                 </div>
                 <h3>Target Product Profile Support</h3>
                 <p>Support in developing a Target Product Profile (TPP) and the necessary clinical steps to achieve it.</p>
             </div>
-            <div class="service-card" id="clinical-development-strategy">
+			<div class="service-card" id="technical-development">
+                <div class="service-icon">
+                    <img src="icons/emoji_u2697.svg" alt="⚗️">
+                </div>
+                <h3>Technical Development</h3>
+                <p>Provide advice on selection of appropriate technologies to enable achieving the target product profile. Assist with candidates’ design and technical troubleshooting during the development.</p>
+            </div>
+			<div class="service-card" id="preclinical-development">
+                <div class="service-icon">
+                    <img src="icons/emoji_u1f9ec.svg" alt="🧬">
+                </div>
+                <h3>Preclinical Development Support</h3>
+                <p>Consulting on preclinical research and toxicology studies. Assist in designing and conducting preclinical studies, including in vitro and in vivo testing. Provide expertise in immunological assays and characterization of vaccine candidates, including immunological analysis and biomarkers.</p>
+            </div>
+			<div class="service-card" id="manufacturing-support">
+                <div class="service-icon">
+                    <img src="icons/emoji_u2699.svg" alt="⚙️">
+                </div>
+                <h3>Manufacturing Support</h3>
+                <p>Provide recommendations on vaccine production techniques and scaling up manufacturing processes. Assist in establishing quality control measures and compliance with Good Manufacturing Practices.</p>
+            </div>
+			<div class="service-card" id="clinical-development-strategy">
                 <div class="service-icon">
                     <img src="icons/emoji_u1f52c.svg" alt="🔬">
                 </div>
                 <h3>Clinical Development Strategy</h3>
-                <p>Support the design of clinical trial protocols, including Phase I, II, and III studies. Consultancy on clinical development, including, but not limited to, writing and critically reviewing clinical study protocols (CTPs), clinical development plans (CDPs), and documentation for the submission of studies to national and supranational regulatory authorities (such as EMA, FDA, and others). Guidance in selecting appropriate endpoints and patient populations for trials. Providing support on immunological analysis and determination of objectives and endpoints, the quality and validation aspects of the required tests, and reporting of the results. Consultancy on interaction with Contract Research Organizations (CROs), which are responsible for the operational aspects of studies. </p>
+                <p>Support the design of clinical trial protocols, including Phase I, II, and III studies. Consulting on clinical development aspects, including, but not limited to, critically reviewing clinical development plans, clinical study protocols, and study submission packages to national and supranational regulatory authorities (EMA, FDA, etc.). Guidance in selecting appropriate endpoints and patient populations for trials. Support on immunological analysis and determination of objectives and endpoints, selection and quality aspects of appropriate  tests and reporting of the results. Consultancy on interaction with Contract Research Organizations (CROs), which are responsible for the operational aspects of studies. </p>
             </div>
-            <div class="service-card" id="safety-evaluation">
-                <div class="service-icon">
-                    <img src="icons/emoji_u1f6e1.svg" alt="🛡️">
-                </div>
-                <h3>Safety Evaluation</h3>
-                <p>Advice on safety evaluation of vaccines and pharmaceutical products, both before, during, and after clinical development.</p>
-            </div>
-            <div class="service-card" id="regulatory-compliance">
+			<div class="service-card" id="regulatory-compliance">
                 <div class="service-icon">
                     <img src="icons/emoji_u1f4cb.svg" alt="📋">
                 </div>
                 <h3>Regulatory Compliance</h3>
                 <p>Advise on regulatory requirements for vaccine development in various jurisdictions (e.g., FDA, EMA). Assist in preparing submission documents for Investigational New Drug (IND) applications and marketing authorization.</p>
             </div>
-            <div class="service-card" id="healthcare-economics">
+			<div class="service-card" id="safety-evaluation">
                 <div class="service-icon">
-                    <img src="icons/emoji_u1f4b0.svg" alt="💰">
+                    <img src="icons/emoji_u1f6e1.svg" alt="🛡️">
                 </div>
-                <h3>Healthcare Economics Analysis and Pricing</h3>
-                <p>Advice on healthcare economics analysis and pricing of vaccines and pharmaceutical products.</p>
+                <h3>Safety Evaluation</h3>
+                <p>Advice on safety evaluation of vaccines and pharmaceutical products, both before, during, and after clinical development.</p>
             </div>
-            <div class="service-card" id="manufacturing-support">
+            <div class="service-card" id="strategic-partnerships">
                 <div class="service-icon">
-                    <img src="icons/emoji_u2699.svg" alt="⚙️">
+                    <img src="icons/emoji_u1f91d.svg" alt="🤝">
                 </div>
-                <h3>Manufacturing Support</h3>
-                <p>Provide recommendations on vaccine production techniques and scaling up manufacturing processes. Assist in establishing quality control measures and compliance with Good Manufacturing Practices (GMP).</p>
-            </div>
-            <div class="service-card" id="post-marketing-surveillance">
-                <div class="service-icon">
-                    <img src="icons/emoji_u1f4ca.svg" alt="📊">
-                </div>
-                <h3>Post-Marketing Surveillance</h3>
-                <p>Develop strategies for monitoring vaccine safety and efficacy post-approval. Assist in collecting and analyzing data from post-marketing studies and adverse event reports.</p>
+                <h3>Strategic Partnerships and Collaborations</h3>
+                <p>Facilitate connections with academic institutions, pharmaceutical companies, and research organizations to foster collaboration. Support joint ventures and partnerships in vaccine innovation and development.</p>
             </div>
             <div class="service-card" id="manuscripts-support">
                 <div class="service-icon">
@@ -609,13 +602,7 @@
                 <h3>Writing and Evaluating Manuscripts Support</h3>
                 <p>Support in writing and evaluating manuscripts for publication in a peer-reviewed scientific journal, related to (pre)clinical, toxicological, and epidemiological studies, including writing overviews or reviews.</p>
             </div>
-            <div class="service-card" id="educational-programs">
-                <div class="service-icon">
-                    <img src="icons/emoji_u1f393.svg" alt="🎓">
-                </div>
-                <h3>Educational and Training Programs</h3>
-                <p>Offer training sessions for healthcare professionals and stakeholders on vaccine development trends and best practices. Provide educational resources and workshops focused on immunization strategies and public health implications.</p>
-            </div>
+			
         </div>
     </section>
 
@@ -662,17 +649,16 @@
                 <h3>Services</h3>
                 <div class="footer-links services-list">
                     <a href="#feasibility-assessment">Feasibility Assessment</a>
-                    <a href="#strategic-partnerships">Strategic Partnerships</a>
-                    <a href="#preclinical-development">Preclinical Development</a>
                     <a href="#target-product-profile">Target Product Profile</a>
-                    <a href="#clinical-development-strategy">Clinical Development</a>
-                    <a href="#safety-evaluation">Safety Evaluation</a>
-                    <a href="#regulatory-compliance">Regulatory Compliance</a>
-                    <a href="#healthcare-economics">Healthcare Economics</a>
-                    <a href="#manufacturing-support">Manufacturing Support</a>
-                    <a href="#post-marketing-surveillance">Post-Marketing Surveillance</a>
+					<a href="#technical-development">Technical Development</a>
+					<a href="#preclinical-development">Preclinical Development</a>
+					<a href="#manufacturing-support">Manufacturing Support</a>
+					<a href="#clinical-development-strategy">Clinical Development</a>
+					<a href="#regulatory-compliance">Regulatory Compliance</a>
+					<a href="#safety-evaluation">Safety Evaluation</a>
+					<a href="#strategic-partnerships">Strategic Partnerships</a>
                     <a href="#manuscripts-support">Manuscripts Support</a>
-                    <a href="#educational-programs">Educational Programs</a>
+					
                 </div>
             </div>
             <div>
@@ -684,7 +670,7 @@
 					</a>
                     <a href="tel:+32472629007" class="contact-item">
 						<img src="icons/phone.svg" alt="Phone:">
-						+32 472-629007
+						+32 472 629 007
 					</a>
                     <div class="contact-item">
 						<img src="icons/location-dot.svg" alt="Address:">
