--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                     <img src="icons/emoji_u1f50d.svg" alt="🔍">
                 </div>
                 <h3>Feasibility Assessment</h3>
-                <p>Conduct market research to evaluate the demand for specific vaccines. Assess scientific literature to identify potential vaccine candidates. Analyze regulatory landscapes and funding opportunities. Strategic analysis of biotech business plans and clinical development plans, integrating activities.</p>
+                <p>Conduct market research to evaluate the demand for specific vaccines. Assess scientific literature to identify potential vaccine candidates. Analyze regulatory landscapes and funding opportunities.</p>
             </div>
 			<div class="service-card" id="target-product-profile">
                 <div class="service-icon">
@@ -592,9 +592,9 @@
                 <div class="service-icon">
                     <img src="icons/emoji_u1f91d.svg" alt="🤝">
                 </div>
-                <h3>Strategic Partnerships and Collaborations</h3>
-                <p>Facilitate connections with academic institutions, pharmaceutical companies, and research organizations to foster collaboration. Support joint ventures and partnerships in vaccine innovation and development.</p>
-            </div>
+                <h3>Strategic Partnerships and Collaboration</h3>
+                <p>Facilitate connections with academic institutions, pharmaceutical companies, and research organizations to foster collaboration. Support joint ventures and partnerships in vaccine innovation and development. Engage with policymakers and public health officials to promote vaccine uptake and address hesitancy. Provide expert testimony and insights on vaccine-related topics at conferences and public forums.</p>
+            </div> 
             <div class="service-card" id="manuscripts-support">
                 <div class="service-icon">
                     <img src="icons/emoji_u1f4dd.svg" alt="📝">
