add more color schemas

--- a/index3.html
+++ b/index3.html
@@ -27,7 +27,7 @@
 		}
 
         .header {
-            background: linear-gradient(to right, #112857 0%, #0D5541 100%);
+            background: linear-gradient(to right, #173a83 0%, #14664c 100%);
             color: white;
             padding: 1rem 0;
             position: fixed;
@@ -125,7 +125,7 @@
                 top: -100%;
                 left: 0;
                 width: 100%;
-                background: linear-gradient(to right, #112857 0%, #0D5541 100%);
+                background: linear-gradient(to right, #173a83 0%, #14664c 100%);
                 transition: top 0.3s ease;
                 box-shadow: 0 5px 10px rgba(0,0,0,0.1);
             }
@@ -151,7 +151,7 @@
         }
 
         .hero {
-            background: linear-gradient(135deg, #112857 0%, #0D5541 100%);
+            background: linear-gradient(135deg, #173a83 0%, #14664c 100%);
             color: white;
             padding: 150px 2rem 100px;
             margin-top: 70px;
@@ -174,7 +174,7 @@
         .cta-button {
 			font-family: Tahoma, 'Segoe UI', Geneva, Verdana, sans-serif;
             background: white;
-            color: #112857;
+            color: #173a83;
             padding: 1rem 2.5rem;
             border: none;
             border-radius: 50px;
@@ -212,7 +212,7 @@
         }
 
         .service-card {
-            background: linear-gradient(135deg, #ffffff 0%, #e6eeec 100%);
+            background: linear-gradient(135deg, #ffffff 0%, #e7efed 100%);
             padding: 2rem;
             border-radius: 15px;
             box-shadow: 0 5px 20px rgba(0,0,0,0.08);
@@ -229,7 +229,7 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: linear-gradient(to right, #405278, #3d7666);
+            background: linear-gradient(to right, #173A83, #14664c);
             border-radius: 15px 15px 0 0;
         }
 
@@ -240,7 +240,7 @@
             right: -50%;
             width: 200%;
             height: 200%;
-            background: radial-gradient(circle, rgba(17,40,87, 0.03) 0%, transparent 70%);
+            background: radial-gradient(circle, rgba(23,58,131, 0.03) 0%, transparent 70%);
             transition: transform 0.5s;
         }
 
@@ -250,8 +250,8 @@
 
         .service-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 15px 40px rgba(13,85,65, 0.2);
-            background: linear-gradient(135deg, #ffffff 0%, #ceddd9 100%);
+            box-shadow: 0 15px 40px rgba(20,102,76, 0.2);
+            background: linear-gradient(135deg, #ffffff 0%, #d0e0db 100%);
         }
 
         .service-icon {
@@ -263,9 +263,9 @@
             align-items: center;
             justify-content: center;
             margin-bottom: 1.5rem;
-            box-shadow: 0 8px 20px rgba(17,40,87, 0.15);
+            box-shadow: 0 8px 20px rgba(23,58,131, 0.15);
             border: 3px solid transparent;
-            background-image: linear-gradient(white, white), linear-gradient(135deg, #405278, #3d7666);background-origin: border-box;
+            background-image: linear-gradient(white, white), linear-gradient(135deg, #173A83, #14664c);background-origin: border-box;
             background-clip: padding-box, border-box;
             position: relative;
             z-index: 1;
@@ -274,7 +274,7 @@
 
         .service-card:hover .service-icon {
             transform: scale(1.1);
-            box-shadow: 0 12px 30px rgba(13,85,65, 0.25);
+            box-shadow: 0 12px 30px rgba(20,102,76, 0.25);
         }
 
         .service-icon img {
@@ -314,7 +314,7 @@
 
         .stat-item h2 {
             font-size: 3rem;
-            color: #0D5541;
+            color: #14664c;
             margin-bottom: 0.5rem;
         }
 
@@ -383,7 +383,7 @@
 
         .footer h3 {
             margin-bottom: 1rem;
-            color: #6d998d;
+            color: #42846f;
         }
 
         .footer a {
@@ -393,7 +393,7 @@
         }
 
         .footer a:hover {
-            color: #6d998d;
+            color: #42846f;
         }
 
         .footer-links {
@@ -411,7 +411,7 @@
         }
 		
 		.contact-item img {
-            filter: brightness(0) saturate(100%) invert(85%) sepia(2%) saturate(6267%) hue-rotate(109deg) brightness(75%) contrast(46%);
+			filter: brightness(0) saturate(100%) invert(47%) sepia(17%) saturate(1071%) hue-rotate(110deg) brightness(92%) contrast(82%);
             width: 18px;
 			margin-right: 10px;
         }
@@ -458,7 +458,7 @@
             right: 30px;
             width: 50px;
             height: 50px;
-            background: linear-gradient(135deg, rgba(17,40,87, 0.8), rgba(13,85,65, 0.8));
+            background: linear-gradient(135deg, rgba(23,58,131, 0.8), rgba(20,102,76, 0.8));
             color: white;
             border: none;
             border-radius: 50%;
@@ -487,7 +487,7 @@
 
         .scroll-to-top:hover {
             transform: translateY(-5px);
-            box-shadow: 0 6px 20px rgba(13,85,65, 0.4);
+            box-shadow: 0 6px 20px rgba(20,102,76, 0.4);
         }
 
         @media (max-width: 768px) {
